<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.NewMovieFragment">


    <TextView
        android:id="@+id/title_fragment_create_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/new_movie_text"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/big_gap"
        android:background="@color/cardLayout"
        android:ems="10"
        android:hint="@string/movie_name_text"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/title_fragment_create_text"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/title_fragment_create_text"
        app:layout_constraintTop_toBottomOf="@+id/title_fragment_create_text" />

    <EditText
        android:id="@+id/category_edittext"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/big_gap"
        android:background="@color/cardLayout"
        android:ems="10"
        android:hint="@string/insert_category_text"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/name_edittext"
        app:layout_constraintStart_toStartOf="@+id/name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/big_gap"
        android:background="@color/cardLayout"
        android:ems="10"
        android:hint="@string/insert_description_text"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/category_edittext"
        app:layout_constraintStart_toStartOf="@+id/category_edittext"
        app:layout_constraintTop_toBottomOf="@+id/category_edittext" />

    <EditText
        android:id="@+id/calification_edittext"
        android:layout_width="321dp"
        android:layout_height="54dp"
        android:layout_marginTop="@dimen/big_gap"
        android:background="@color/cardLayout"
        android:ems="10"
        android:hint="@string/insert_calification_text"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/description_edittext"
        app:layout_constraintStart_toStartOf="@+id/description_edittext"
        app:layout_constraintTop_toBottomOf="@+id/description_edittext" />

    <Button
        android:id="@+id/action_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_gap"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/submit_text"
        app:layout_constraintEnd_toEndOf="@+id/calification_edittext"
        app:layout_constraintStart_toStartOf="@+id/calification_edittext"
        app:layout_constraintTop_toBottomOf="@+id/calification_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>
